Basic scraping working (no db).

--- a/app/views/scrape/index.html.erb
+++ b/app/views/scrape/index.html.erb
@@ -1,2 +1,9 @@
 <h1>Scrape#index</h1>
 <p>Scrapping delays information from <%= @site %></p>
+<table>
+<% @delays.each do |delay| %>
+		<tr>
+				<td><%= delay %></td>
+		</tr>
+<% end %>
+</table>
