--- a/app/views/scrape/index.html.erb
+++ b/app/views/scrape/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Scrape#index</h1>
-<p>Scrapping delays information from <%= @site %></p>
+<p>Scraping delays information from <%= @site %></p>
 <table>
 <% @delays.each do |delay| %>
 		<tr>
