Fixed scrape index view

--- a/app/views/scrape/index.html.erb
+++ b/app/views/scrape/index.html.erb
@@ -3,7 +3,7 @@
 <table>
 <% @delays.each do |delay| %>
 		<tr>
-				<td><%= delay %></td>
+				<td><%= link_to delay.bus_route.routeName, delay.bus_route, :id => delay.bus_route.routeId %></td>
 		</tr>
 <% end %>
 </table>
