Renamed OTSA=>OSTA. Added routeId to bus_routes.

--- a/app/views/bus_routes/index.html.erb
+++ b/app/views/bus_routes/index.html.erb
@@ -1,8 +1,9 @@
 <h1>Bus Routes</h1>
 <table>
 	<% @routes.each do |route| %>
-    <tr>
-			<td><%= link_to route.routeName, route, :id => route.routeId %></td>
+		<tr>
+			<% linkLabel = route.routeName + " (" + route.routeId + ")"; %>
+			<td><%= link_to linkLabel, route, :id => route.routeId %></td>
     </tr>
 	<% end %>
 </table>
