--- a/app/views/bus_delays/index.html.erb
+++ b/app/views/bus_delays/index.html.erb
@@ -1,4 +1,11 @@
 <h1>Bus Delays</h1>
+
+<%= form_tag("/bus_delays", method: "get") do %>
+		  <%= label_tag(:bus_delays_date, "Date:") %>
+		  <%= text_field_tag(:bus_delays_date, @bus_delays_date, class: :bus_delays_date) %>
+			  <%= submit_tag("Check for delays") %>
+	  <% end %>
+
 <table>
 	<% @delays.each do |delay| %>
 	<tr>
