--- a/app/views/bus_delays/index.html.erb
+++ b/app/views/bus_delays/index.html.erb
@@ -9,7 +9,7 @@
 <table>
 	<% @delays.each do |delay| %>
 	<tr>
-			<% route = delay.route %>
+			<% route = delay.bus_route %>
 			<% linkLabel = route.routeName + " (" + route.routeId + ")"; %>
 			<td><%= link_to linkLabel, route, :id => route.routeId %></td>
     </tr>
